syntax = "proto3";

package rivet.backend.pkg.upload.delete;

import "proto/common.proto";

message Request {
	repeated rivet.common.Uuid upload_ids = 1;
}

message Response {

}
